# pymultinest-bilby

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/pymultinest_bilby/: __init__.py  plugin.py
tests/: test_bilby_integration.py  test_sampler_class.py
